--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "private": true,
   "scripts": {
     "build": "webpack --config webpack/webpack.prod.conf.js  --colors",
-    "postbuild": "node ./scripts/postbuild.js",
     "dev": "webpack-dev-server --open --config webpack/webpack.dev.conf.js",
     "first-release": "standard-version --commit-all --tag-prefix v --first-release",
     "release": "standard-version --commit-all --tag-prefix v",
@@ -18,12 +17,13 @@
     "@babel/preset-env": "^7.7.7",
     "@commitlint/cli": "^9.0.1",
     "@commitlint/config-conventional": "^9.0.1",
-    "@intervolga/optimize-cssnano-plugin": "^1.0.6",
+    "autoprefixer": "^9.8.4",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "babel-plugin-transform-remove-debugger": "^6.9.4",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.0",
+    "cssnano": "^4.1.10",
     "dotenv": "^8.2.0",
     "eslint": "^7.4.0",
     "eslint-config-airbnb-base": "^14.0.0",
@@ -31,12 +31,15 @@
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.19.1",
     "file-loader": "^6.0.0",
+    "html-inline-css-webpack-plugin": "^1.8.1",
     "html-loader": "^1.1.0",
     "html-variables-plugin": "^1.0.0",
     "html-webpack-plugin": "^4.3.0",
     "husky": "3",
     "lint-staged": "^10.2.11",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.0",
+    "postcss-loader": "^3.0.0",
     "prettier": "^2.0.5",
     "replace": "^1.1.5",
     "sass-loader": "^9.0.1",
@@ -44,7 +47,6 @@
     "style-loader": "^1.1.2",
     "url-loader": "^4.1.0",
     "webpack": "^4.41.5",
-    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1",
     "webpack-merge": "^5.0.7"
