--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-import": "^2.19.1",
     "file-loader": "^6.0.0",
     "html-inline-css-webpack-plugin": "^1.8.1",
+    "html-inline-script-webpack-plugin": "^1.0.0",
     "html-loader": "^1.1.0",
     "html-variables-plugin": "^1.0.0",
     "html-webpack-plugin": "^4.3.0",
