--- a/package.json
+++ b/package.json
@@ -4,51 +4,51 @@
   "description": "HTML source of error document used in my personal website",
   "private": true,
   "scripts": {
-    "build": "webpack --config webpack/webpack.prod.conf.js  --colors",
-    "dev": "webpack-dev-server --open --config webpack/webpack.dev.conf.js",
-    "first-release": "standard-version --commit-all --tag-prefix v --first-release",
-    "release": "standard-version --commit-all --tag-prefix v",
-    "lint": "eslint --ext .js src"
+    "build": "webpack --config webpack/webpack.prod.conf.js",
+    "dev": "webpack serve --open --config webpack/webpack.dev.conf.js",
+    "first-release": "npx standard-version --commit-all --tag-prefix v --first-release",
+    "release": "npx standard-version --commit-all --tag-prefix v",
+    "lint": "eslint --ext .js src",
+    "prepare": "husky install"
   },
   "author": "Ice Lam",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
-    "@commitlint/cli": "^9.0.1",
-    "@commitlint/config-conventional": "^9.0.1",
+    "@commitlint/cli": "^12.0.1",
+    "@commitlint/config-conventional": "^12.0.1",
     "autoprefixer": "^9.8.4",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "babel-plugin-transform-remove-debugger": "^6.9.4",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.4.0",
+    "css-loader": "^5.1.1",
     "cssnano": "^4.1.10",
     "dotenv": "^8.2.0",
     "eslint": "^7.4.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-import-resolver-webpack": "^0.12.2",
+    "eslint-import-resolver-webpack": "^0.13.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.19.1",
     "file-loader": "^6.0.0",
     "html-inline-css-webpack-plugin": "^1.8.1",
-    "html-inline-script-webpack-plugin": "^1.0.0",
-    "html-loader": "^1.1.0",
+    "html-inline-script-webpack-plugin": "^1.1.0",
+    "html-loader": "^2.1.1",
     "html-variables-plugin": "^1.0.0",
-    "html-webpack-plugin": "^4.3.0",
-    "husky": "3",
+    "html-webpack-plugin": "^5.2.0",
+    "husky": "^5.1.3",
     "lint-staged": "^10.2.11",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.0",
-    "postcss-loader": "^3.0.0",
+    "mini-css-extract-plugin": "^1.3.9",
+    "node-sass": "^5.0.0",
+    "postcss-loader": "^5.1.0",
     "prettier": "^2.0.5",
-    "sass-loader": "^9.0.1",
-    "standard-version": "^8.0.0",
-    "style-loader": "^1.1.2",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
     "url-loader": "^4.1.0",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1",
+    "webpack": "^5.24.3",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.0.7"
   },
   "dependencies": {
