chore: update project dependencies

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "build": "webpack --config webpack/webpack.prod.conf.js",
-    "dev": "webpack serve --open --config webpack/webpack.dev.conf.js",
+    "start": "webpack serve --open --config webpack/webpack.dev.conf.js",
     "first-release": "npx standard-version --commit-all --tag-prefix v --first-release",
     "release": "npx standard-version --commit-all --tag-prefix v",
     "lint": "eslint --ext .js src",
@@ -14,43 +14,43 @@
   "author": "Ice Lam",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
-    "@commitlint/cli": "^13.2.1",
-    "@commitlint/config-conventional": "^13.2.0",
-    "autoprefixer": "^10.4.0",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
+    "autoprefixer": "^10.4.13",
+    "babel-loader": "^9.1.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "babel-plugin-transform-remove-debugger": "^6.9.4",
     "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^6.5.0",
-    "cssnano": "^5.0.8",
-    "dotenv": "^10.0.0",
-    "eslint": "^8.1.0",
-    "eslint-config-airbnb-base": "^14.0.0",
+    "css-loader": "^6.7.2",
+    "cssnano": "^5.1.14",
+    "dotenv": "^16.0.3",
+    "eslint": "^8.28.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-import-resolver-webpack": "^0.13.0",
-    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-import": "^2.26.0",
     "file-loader": "^6.0.0",
     "html-inline-css-webpack-plugin": "^1.11.1",
-    "html-inline-script-webpack-plugin": "^2.0.0",
-    "html-loader": "^3.0.0",
+    "html-inline-script-webpack-plugin": "^3.1.0",
+    "html-loader": "^4.2.0",
     "html-variables-plugin": "^1.0.0",
     "html-webpack-plugin": "^5.2.0",
-    "husky": "^7.0.4",
-    "lint-staged": "^11.2.6",
-    "mini-css-extract-plugin": "^2.4.3",
-    "node-sass": "^6.0.1",
-    "postcss-loader": "^6.2.0",
-    "prettier": "^2.0.5",
-    "sass-loader": "^12.3.0",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.0.3",
+    "mini-css-extract-plugin": "^2.7.0",
+    "node-sass": "^8.0.0",
+    "postcss-loader": "^7.0.1",
+    "prettier": "^2.8.0",
+    "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
-    "webpack": "^5.24.3",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^4.4.0",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.0",
+    "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.0.7"
   },
   "dependencies": {
-    "core-js": "^3.6.1",
+    "core-js": "^3.26.1",
     "particles.js": "^2.0.0"
   },
   "browserslist": [
